--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -499,8 +499,7 @@ filter {
       ("profinet" in [network][protocol]) or
       ("profinet_dce_rpc" in [network][protocol]) or
       ("s7comm" in [network][protocol]) or
-      ("s7comm_plus" in [network][protocol]) or
-      ("s7comm_read_szl" in [network][protocol])) {
+      ("s7comm_plus" in [network][protocol])) {
     mutate { id => "mutate_add_tag_ics_from_network_protocol"
              add_tag => [ "ics" ] }
   }
