--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3447,6 +3447,40 @@ filter {
       add_tag => [ "ics" ]
     }
 
+  } else if ([log_source] == "s7comm_upload_download") {
+    #############################################################################################################################
+    # s7comm_upload_download.log
+    # https://github.com/cisagov/icsnpp-s7comm
+
+    dissect {
+      id => "dissect_zeek_s7comm_upload_download"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][rosctr_name]}	%{[zeek_cols][pdu_reference]}	%{[zeek_cols][function_name]}	%{[zeek_cols][function_status]}	%{[zeek_cols][session_id]}	%{[zeek_cols][blocklength]}	%{[zeek_cols][filename]}	%{[zeek_cols][block_type]}	%{[zeek_cols][block_number]}	%{[zeek_cols][destination_filesystem]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_s7comm_upload_download"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_s7comm_upload_download"
+        init => "$zeek_s7comm_upload_download_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'rosctr_name', 'pdu_reference', 'function_name', 'function_status', 'session_id', 'blocklength', 'filename', 'block_type', 'block_number', 'destination_filesystem' ]"
+        code => "event.set('[zeek_cols]', $zeek_s7comm_upload_download_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_s7comm_upload_download"
+      add_field => {
+        "[zeek_cols][proto]" => "tcp"
+        "[zeek_cols][service]" => "s7comm"
+      }
+      add_tag => [ "ics" ]
+    }
+
   } else if ([log_source] == "signatures") {
     #############################################################################################################################
     # signatures.log
@@ -5717,6 +5751,13 @@ filter {
     mutate { id => "mutate_rename_zeek_s7comm_read_szl_pdu_reference"
              rename => { "[zeek][s7comm_read_szl][pdu_reference]" => "[zeek][s7comm][pdu_reference]" } }
 
+  } else if ([log_source] == "s7comm_upload_download") {
+    #############################################################################################################################
+    # s7comm_upload_download.log specific logic
+
+    # so we can link s7comm and s7comm_upload_download by this field
+    mutate { id => "mutate_rename_zeek_s7comm_upload_download_pdu_reference"
+             rename => { "[zeek][s7comm_upload_download][pdu_reference]" => "[zeek][s7comm][pdu_reference]" } }
 
   } else if ([log_source] == "signatures") {
     #############################################################################################################################
