--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -438,6 +438,19 @@ filter {
              merge => { "[event][action]" => "[@metadata][s7comm_read_szl_action]" } }
   }
 
+  if ([zeek][s7comm_upload_download]) {
+    ruby {
+      # action = rosctr_name:function_name
+      id => "ruby_zeek_s7comm_upload_download_generate_action"
+      code => "
+        actions = Array.new unless (actions = event.get('[event][action]'))
+        action = [event.get('[zeek][s7comm_upload_download][rosctr_name]'),
+                  event.get('[zeek][s7comm_upload_download][function_name]')].reject{ |e| e.nil? || e&.empty? }.join(':')
+        actions.append(action) unless action.nil? || action&.empty?
+        event.set('[event][action]', actions)"
+    }
+  }
+
   if ([zeek][sip][method]) { mutate { id => "mutate_merge_normalize_zeek_sip_method"
                                      merge => { "[event][action]" => "[zeek][sip][method]" } } }
 
@@ -890,6 +903,9 @@ filter {
     }
   }
 
+  if ([zeek][s7comm_upload_download][function_status]) { mutate { id => "mutate_merge_normalize_zeek_s7comm_upload_download_function_status"
+                                                                  merge => { "[event][result]" => "[zeek][s7comm_upload_download][function_status]" } } }
+
   if ([zeek][sip][status_code]) {
     # normalized version of sip reply code (status_msg may be unpredictable)
     translate {
@@ -1175,8 +1191,11 @@ filter {
   if ([zeek][http][resp_filenames])              { mutate { id => "mutate_merge_normalize_zeek_http_resp_filenames"
                                                            merge => { "[file][path]" => "[zeek][http][resp_filenames]" } } }
 
-  if ([zeek][irc][dcc_file_name])                { mutate { id => "mutate_merge_normalize_zeek_irc_dcc_file_name"
-                                                           merge => { "[file][path]" => "[zeek][irc][dcc_file_name]" } } }
+  if ([zeek][s7comm_upload_download][filename])  { mutate { id => "mutate_merge_normalize_zeek_s7comm_upload_download_filename"
+                                                            merge => { "[file][path]" => "[zeek][s7comm_upload_download][filename]" } } }
+
+  if ([zeek][tftp][fname])                       { mutate { id => "mutate_merge_normalize_zeek_tftp_fname"
+                                                           merge => { "[file][path]" => "[zeek][tftp][fname]" } } }
 
   if ([zeek][tftp][fname])                       { mutate { id => "mutate_merge_normalize_zeek_tftp_fname"
                                                            merge => { "[file][path]" => "[zeek][tftp][fname]" } } }
