--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-repository: mmguero-dev/Malcolm
+repository: idaholab/Malcolm
 title: Malcolm
 description: A powerful, easily deployable network traffic analysis tool suite
 logo: docs/images/logo/Malcolm_outline_banner_dark.png
@@ -24,8 +24,8 @@ severity_docs_uri: docs/severity.html
 thirdparty_logs_docs_uri: docs/third-party-logs.html
 upload_docs_uri: docs/upload.html
 github:
-  owner_name: Seth Grover
-  default_branch: development
+  owner_name: Idaho National Laboratory
+  default_branch: main
 plugins:
   - jekyll-relative-links
   - jekyll-remote-theme
@@ -87,6 +87,7 @@ exclude:
   - suricata
   - suricata-logs
   - yara
+  - yq
   - zeek
   - zeek-logs
   - "**/*.ai"
