--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ quickstart_docs_uri: docs/quickstart.html
 severity_docs_uri: docs/severity.html
 thirdparty_logs_docs_uri: docs/third-party-logs.html
 upload_docs_uri: docs/upload.html
+url:
 github:
   owner_name: Idaho National Laboratory
   default_branch: main
@@ -30,6 +31,7 @@ plugins:
   - jekyll-relative-links
   - jekyll-remote-theme
   - jekyll-seo-tag
+  - jekyll-sitemap
 show_downloads: true
 relative_links:
   enabled: true
