work in progress

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -481,6 +481,19 @@ filter {
     }
   }
 
+  # TODO: testing only, work in progress
+  if ([source][ip]) {
+    ruby {
+      id => "experimental_cache"
+      path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
+      script_params => {
+        "source" => "[source][ip]"
+        "target" => "[source][enriched]"
+        "netbox_token_env" => "SUPERUSER_API_TOKEN"
+      }
+    }
+  }
+
   # tag ICS services from if not already tagged
   if ("ics" not in [tags]) and
      (("bacnet" in [network][protocol]) or
