--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ remote_theme: pages-themes/minimal@v0.2.0
 external_download_url: https://malcolm.fyi/docs/download.html
 youtube_url: https://www.youtube.com/c/MalcolmNetworkTrafficAnalysisToolSuite
 mastodon:
-  id: mmguero@infosec.exchange
+  id: malcolm@malcolm.fyi
   url: https://infosec.exchange/@mmguero
 docs_uri: docs/
 alerting_docs_uri: docs/alerting.html
