Updated Logstash to 8.4.0 and Filebeat to 8.5.0

--- a/logstash/supervisord.conf
+++ b/logstash/supervisord.conf
@@ -8,6 +8,7 @@ nodaemon=true
 logfile=/dev/null
 logfile_maxbytes=0
 pidfile=/tmp/supervisord.pid
+environment=PATH=/usr/share/logstash/bin:%(ENV_PATH)s
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
