--- a/filebeat/supervisord.conf
+++ b/filebeat/supervisord.conf
@@ -9,6 +9,7 @@ nodaemon=true
 logfile=/dev/null
 logfile_maxbytes=0
 pidfile=/tmp/supervisord.pid
+environment=PATH=/usr/share/filebeat:%(ENV_PATH)s
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
