Work in progress for netbox enrichment

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -482,13 +482,13 @@ filter {
   }
 
   # TODO: testing only, work in progress
-  if ([source][ip]) {
+  if ([event][provider]) {
     ruby {
       id => "experimental_cache"
       path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
       script_params => {
-        "source" => "[source][ip]"
-        "target" => "[source][enriched]"
+        "source" => "[event][provider]"
+        "target" => "[event][enriched]"
         "netbox_token_env" => "SUPERUSER_API_TOKEN"
       }
     }
