Cache host name lookups to freq

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -281,38 +281,17 @@ filter {
 
   if ([dns][host]) {
     # if requested, look up DNS queries using freq_server.py to get entropy scores
-
     ruby {
-        id => "ruby_dns_freq_lookup"
-        init => "
-          require 'net/http'
-          require 'cgi'
-          $freqLookupEnabled = ENV['FREQ_LOOKUP'] || 'false'
-          "
-        # freq_server.py returns a string like: (2.9333, 3.6353)
-        code => "
-            if ($freqLookupEnabled == 'true') then
-              scoresv1 = Array.new
-              scoresv2 = Array.new
-              scoresTmp = Array.new
-              begin
-                event.get('[dns][host]').each { |query|
-                  if (query.length >= 4) and (query !~ /(ip6\.int|ip6\.arpa|in-addr\.arpa|b32\.i2p)$/i) then
-                    scoresTmp.clear
-                    scoresTmp.concat(Net::HTTP.get_response(URI.parse('http://freq:10004/measure/' + CGI.escape(query))).body.gsub(/(^\(|\)$|\s+)/, '').split(',').map(&:to_f))
-                    if (scoresTmp.length == 2) then
-                      scoresv1 << scoresTmp[0]
-                      scoresv2 << scoresTmp[1]
-                    end
-                  end
-                }
-              rescue Exception => e
-                event.set('ruby_exception', 'ruby_dns_freq_lookup: ' + e.message)
-              end
-              event.set('[event][freq_score_v1]', scoresv1) unless (scoresv1.length == 0)
-              event.set('[event][freq_score_v2]', scoresv2) unless (scoresv2.length == 0)
-            end"
+      id => "ruby_dns_freq_lookup"
+      path => "/usr/share/logstash/malcolm-ruby/freq_lookup.rb"
+      script_params => {
+        "source" => "[dns][host]"
+        "target_1" => "[event][freq_score_v1]"
+        "target_2" => "[event][freq_score_v2]"
+        "source_type" => "dns"
+      }
     }
+
   } # end if dns.host
 
   if ([dns][ip]) and ([dns][ip][0]) {
@@ -399,21 +378,15 @@ filter {
   } # end if radius
 
   if ([tls][client][server_name]) {
-    mutate {
-      add_field => { "[@metadata][ENV_FREQ_LOOKUP]" => "${FREQ_LOOKUP:false}" }
-    }
-    if ([@metadata][ENV_FREQ_LOOKUP] == "true") {
-      # if requested, look up [tls][client][server_name] queries using freq_server.py to get entropy scores
-      http {
-        id => "rest_ssl_server_name_freq_lookup"
-        url => "http://freq:10004/measure/%{[tls][client][server_name]}"
-        target_body => "[@metadata][tls_server_name_freq]"
-      }
-      if ([@metadata][tls_server_name_freq]) {
-        grok {
-          id => "grok_tls_server_name_freq_parse"
-          match => { "[@metadata][tls_server_name_freq]" => [ "^\(%{NUMBER:[event][freq_score_v1]}, %{NUMBER:[event][freq_score_v2]}\)$" ] }
-        }
+    # if requested, look up [tls][client][server_name] queries using freq_server.py to get entropy scores
+    ruby {
+      id => "rest_ssl_server_name_freq_lookup"
+      path => "/usr/share/logstash/malcolm-ruby/freq_lookup.rb"
+      script_params => {
+        "source" => "[tls][client][server_name]"
+        "target_1" => "[event][freq_score_v1]"
+        "target_2" => "[event][freq_score_v2]"
+        "source_type" => "tls"
       }
     }
   } # end if tls.client.server_name
