--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -920,7 +920,7 @@ services:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - ./netbox/postgres:/var/lib/postgresql/data:rw
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}" ]
+      test: [ "CMD-SHELL", "[[ $${NETBOX_POSTGRES_DISABLED} == 'true' ]] || pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}" ]
       interval: 60s
       timeout: 15s
       retries: 3
@@ -947,7 +947,7 @@ services:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - ./netbox/redis:/data
     healthcheck:
-      test: ["CMD-SHELL", "pidof redis-server || exit 1" ]
+      test: ["CMD-SHELL", "[[ $${NETBOX_REDIS_DISABLED} == 'true' ]] || ( pidof redis-server || exit 1 )" ]
       interval: 60s
       timeout: 15s
       retries: 3
@@ -973,7 +973,7 @@ services:
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
     healthcheck:
-      test: ["CMD-SHELL", "pidof redis-server || exit 1" ]
+      test: ["CMD-SHELL", "[[ $${NETBOX_REDIS_DISABLED} == 'true' ]] || ( pidof redis-server || exit 1 )" ]
       interval: 60s
       timeout: 15s
       retries: 3
