--- a/netbox/supervisord.conf
+++ b/netbox/supervisord.conf
@@ -38,6 +38,7 @@ command=/opt/netbox/venv/bin/python /usr/local/bin/netbox_init.py
   --url "http://localhost:8080/netbox"
   --token "%(ENV_SUPERUSER_API_TOKEN)s"
   --net-map /usr/local/share/net-map.json
+  --library /opt/netbox-devicetype-library
 autostart=true
 autorestart=false
 startsecs=0
