--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -355,7 +355,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/opensearch.Dockerfile
-    image: malcolmnetsec/opensearch:6.4.2
+    image: malcolmnetsec/opensearch:6.4.3
     restart: "no"
     stdin_open: false
     tty: true
@@ -386,9 +386,9 @@ services:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - ./.opensearch.primary.curlrc:/var/local/opensearch.primary.curlrc:ro
       - ./.opensearch.secondary.curlrc:/var/local/opensearch.secondary.curlrc:ro
-      - ./opensearch/opensearch.keystore:/usr/share/opensearch/config/opensearch.keystore:rw
       - ./opensearch:/usr/share/opensearch/data:delegated
       - ./opensearch-backup:/opt/opensearch/backup:delegated
+      - ./opensearch/opensearch.keystore:/usr/share/opensearch/config/opensearch.keystore:rw
     healthcheck:
       test: ["CMD", "curl", "--silent", "--fail", "http://localhost:9200"]
       interval: 30s
@@ -399,7 +399,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/dashboards-helper.Dockerfile
-    image: malcolmnetsec/dashboards-helper:6.4.2
+    image: malcolmnetsec/dashboards-helper:6.4.3
     restart: "no"
     stdin_open: false
     tty: true
@@ -433,7 +433,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/dashboards.Dockerfile
-    image: malcolmnetsec/dashboards:6.4.2
+    image: malcolmnetsec/dashboards:6.4.3
     restart: "no"
     stdin_open: false
     tty: true
@@ -461,7 +461,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/logstash.Dockerfile
-    image: malcolmnetsec/logstash-oss:6.4.2
+    image: malcolmnetsec/logstash-oss:6.4.3
     restart: "no"
     stdin_open: false
     tty: true
@@ -511,7 +511,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/filebeat.Dockerfile
-    image: malcolmnetsec/filebeat-oss:6.4.2
+    image: malcolmnetsec/filebeat-oss:6.4.3
     restart: "no"
     stdin_open: false
     tty: true
@@ -553,7 +553,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/arkime.Dockerfile
-    image: malcolmnetsec/arkime:6.4.2
+    image: malcolmnetsec/arkime:6.4.3
     restart: "no"
     stdin_open: false
     tty: true
@@ -597,7 +597,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/zeek.Dockerfile
-    image: malcolmnetsec/zeek:6.4.2
+    image: malcolmnetsec/zeek:6.4.3
     restart: "no"
     stdin_open: false
     tty: true
@@ -640,7 +640,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/zeek.Dockerfile
-    image: malcolmnetsec/zeek:6.4.2
+    image: malcolmnetsec/zeek:6.4.3
     restart: "no"
     stdin_open: false
     tty: true
@@ -676,7 +676,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/suricata.Dockerfile
-    image: malcolmnetsec/suricata:6.4.2
+    image: malcolmnetsec/suricata:6.4.3
     restart: "no"
     stdin_open: false
     tty: true
@@ -716,7 +716,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/suricata.Dockerfile
-    image: malcolmnetsec/suricata:6.4.2
+    image: malcolmnetsec/suricata:6.4.3
     restart: "no"
     stdin_open: false
     tty: true
@@ -746,7 +746,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-monitor.Dockerfile
-    image: malcolmnetsec/file-monitor:6.4.2
+    image: malcolmnetsec/file-monitor:6.4.3
     restart: "no"
     stdin_open: false
     tty: true
@@ -773,7 +773,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-capture.Dockerfile
-    image: malcolmnetsec/pcap-capture:6.4.2
+    image: malcolmnetsec/pcap-capture:6.4.3
     restart: "no"
     stdin_open: false
     tty: true
@@ -798,7 +798,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-monitor.Dockerfile
-    image: malcolmnetsec/pcap-monitor:6.4.2
+    image: malcolmnetsec/pcap-monitor:6.4.3
     restart: "no"
     stdin_open: false
     tty: true
@@ -827,7 +827,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-upload.Dockerfile
-    image: malcolmnetsec/file-upload:6.4.2
+    image: malcolmnetsec/file-upload:6.4.3
     restart: "no"
     stdin_open: false
     tty: true
@@ -855,7 +855,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:6.4.2
+    image: malcolmnetsec/htadmin:6.4.3
     build:
       context: .
       dockerfile: Dockerfiles/htadmin.Dockerfile
@@ -882,7 +882,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:6.4.2
+    image: malcolmnetsec/freq:6.4.3
     build:
       context: .
       dockerfile: Dockerfiles/freq.Dockerfile
@@ -906,7 +906,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:6.4.2
+    image: malcolmnetsec/name-map-ui:6.4.3
     build:
       context: .
       dockerfile: Dockerfiles/name-map-ui.Dockerfile
@@ -932,7 +932,7 @@ services:
       retries: 3
       start_period: 60s
   netbox:
-    image: malcolmnetsec/netbox:6.4.2
+    image: malcolmnetsec/netbox:6.4.3
     build:
       context: .
       dockerfile: Dockerfiles/netbox.Dockerfile
@@ -966,7 +966,7 @@ services:
       retries: 3
       start_period: 120s
   netbox-postgres:
-    image: malcolmnetsec/postgresql:6.4.2
+    image: malcolmnetsec/postgresql:6.4.3
     build:
       context: .
       dockerfile: Dockerfiles/postgresql.Dockerfile
@@ -986,13 +986,13 @@ services:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - ./netbox/postgres:/var/lib/postgresql/data:rw
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}" ]
+      test: [ "CMD-SHELL", "[[ $${NETBOX_POSTGRES_DISABLED} == 'true' ]] || pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}" ]
       interval: 60s
       timeout: 15s
       retries: 3
       start_period: 45s
   netbox-redis:
-    image: malcolmnetsec/redis:6.4.2
+    image: malcolmnetsec/redis:6.4.3
     build:
       context: .
       dockerfile: Dockerfiles/redis.Dockerfile
@@ -1016,13 +1016,13 @@ services:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - ./netbox/redis:/data
     healthcheck:
-      test: ["CMD-SHELL", "pidof redis-server || exit 1" ]
+      test: ["CMD-SHELL", "[[ $${NETBOX_REDIS_DISABLED} == 'true' ]] || ( pidof redis-server || exit 1 )" ]
       interval: 60s
       timeout: 15s
       retries: 3
       start_period: 45s
   netbox-redis-cache:
-    image: malcolmnetsec/redis:6.4.2
+    image: malcolmnetsec/redis:6.4.3
     build:
       context: .
       dockerfile: Dockerfiles/redis.Dockerfile
@@ -1045,13 +1045,13 @@ services:
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
     healthcheck:
-      test: ["CMD-SHELL", "pidof redis-server || exit 1" ]
+      test: ["CMD-SHELL", "[[ $${NETBOX_REDIS_DISABLED} == 'true' ]] || ( pidof redis-server || exit 1 )" ]
       interval: 60s
       timeout: 15s
       retries: 3
       start_period: 45s
   api:
-    image: malcolmnetsec/api:6.4.2
+    image: malcolmnetsec/api:6.4.3
     build:
       context: .
       dockerfile: Dockerfiles/api.Dockerfile
@@ -1080,7 +1080,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/nginx.Dockerfile
-    image: malcolmnetsec/nginx-proxy:6.4.2
+    image: malcolmnetsec/nginx-proxy:6.4.3
     restart: "no"
     stdin_open: false
     tty: true
