--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -615,6 +615,18 @@ filter {
     }
   }
 
+  if ([zeek][cip][cip_status] or [zeek][cip][cip_extended_status]) {
+    ruby {
+      # result = cip_status:cip_extended_status
+      id => "ruby_zeek_cip_generate_result"
+      code => "
+        results = Array.new unless (results = event.get('[event][result]'))
+        results.append([event.get('[zeek][cip][cip_status]'),
+                        event.get('[zeek][cip][cip_extended_status]')].reject{ |e| e.nil? || e&.empty? }.join(':'))
+        event.set('[event][result]', results)"
+    }
+  }
+
   if ([zeek][cip][cip_status]) { mutate { id => "mutate_merge_normalize_zeek_cip_status_result"
                                          merge => { "[event][result]" => "[zeek][cip][cip_status]" } } }
 
