Use bartblaze/Yara-rules as part of the default yara ruleset

--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -102,6 +102,7 @@ export CLAMD_MAX_REQUESTS=8
 export EXTRACTED_FILE_YARA_CUSTOM_ONLY=false
 export YARA_MAX_REQUESTS=8
 export YARA_RULES_DIR=/opt/yara-rules
+export YARA_RULES_SRC_DIR=/opt/yara-rules-src
 export CAPA_VERBOSE=false
 export CAPA_MAX_REQUESTS=4
 
