work in progress on idaholab/Malcolm#132, Enrich network traffic metadata via NetBox lookups
Squashed commit of the following:

commit c05ca3ba7dc21a439512f811313ff0c0acddd40c
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Mon Dec 12 10:27:52 2022 -0700

    testing with netbox API

commit a8d849a5dd77ef1541302053e872a140a9d5b32e
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Mon Dec 12 10:22:36 2022 -0700

    testing with netbox API

commit caa7eafedb0689b6ac973c31a6e2db7f99c9737f
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Mon Dec 12 09:21:15 2022 -0700

    testing with netbox API

commit d6e3278e949a3f1703266f93338aaf0895883597
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Mon Dec 12 07:59:27 2022 -0700

    testing with netbox API

commit e884d27f0feeada21bd9663b58975447a147a4fb
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Fri Dec 9 15:29:19 2022 -0700

    testing with netbox API

commit 6436c9f2d0a972d9833accdb9125c37dea9e8e48
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Fri Dec 9 15:20:40 2022 -0700

    testing with netbox API

commit 720c8c3bd16230c33b417a53e304d694541c807f
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Fri Dec 9 15:10:59 2022 -0700

    testing with netbox API

commit 5e3f6a5a22dca6ec840489281152086eb29441c1
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Fri Dec 9 15:04:15 2022 -0700

    testing with netbox API

commit 5db3442b2df8f31447f654862adef5886f68c6a0
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Fri Dec 9 14:54:54 2022 -0700

    testing with netbox API

commit c4d28f11bff99f5955b09818c68c9b638132cb55
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Fri Dec 9 14:51:17 2022 -0700

    testing with netbox API

commit df42a3c72ff7d57af9757c4e45c07d760a1698eb
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Fri Dec 9 14:48:10 2022 -0700

    testing with netbox API

commit 2d5948d3e1142a10d60f3b828a5ba610d48c0637
Author: Seth Gro

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -454,6 +454,62 @@ filter {
     }
   }
 
+  ################################################################################################
+  # Do enrichment based on NetBox lookups:
+  # - source.ip -> source.hostname and source.segment
+  # - destination.ip -> destination.hostname and destination.segment
+  # - TODO: source.mac -> source.hostname
+  # - TODO: destination.mac -> destination.hostname
+  # The LOGSTASH_NETBOX_ENRICHMENT environment variable is checked inside netbox_enrich.rb
+  #   and will short-circuit unles this feature is enabled.
+
+  if ([source][ip]) {
+    ruby {
+      id => "ruby_netbox_enrich_source_ip_device"
+      path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
+      script_params => {
+        "source" => "[source][ip]"
+        "target" => "[source][hostname]"
+        "lookup_type" => "ip_device"
+        "netbox_token_env" => "SUPERUSER_API_TOKEN"
+      }
+    }
+    ruby {
+      id => "ruby_netbox_enrich_source_ip_segment"
+      path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
+      script_params => {
+        "source" => "[source][ip]"
+        "target" => "[source][segment]"
+        "lookup_type" => "ip_vrf"
+        "netbox_token_env" => "SUPERUSER_API_TOKEN"
+      }
+    }
+  }
+  if ([destination][ip]) {
+    ruby {
+      id => "ruby_netbox_enrich_destination_ip_device"
+      path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
+      script_params => {
+        "source" => "[destination][ip]"
+        "target" => "[destination][hostname]"
+        "lookup_type" => "ip_device"
+        "netbox_token_env" => "SUPERUSER_API_TOKEN"
+      }
+    }
+    ruby {
+      id => "ruby_netbox_enrich_destination_ip_segment"
+      path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
+      script_params => {
+        "source" => "[destination][ip]"
+        "target" => "[destination][segment]"
+        "lookup_type" => "ip_vrf"
+        "netbox_token_env" => "SUPERUSER_API_TOKEN"
+      }
+    }
+  }
+
+  ################################################################################################
+
   # tag ICS services from if not already tagged
   if ("ics" not in [tags]) and
      (("bacnet" in [network][protocol]) or
