--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -85,7 +85,7 @@ host.name=db:host.name;group:malcolm;kind:termfield;friendly:Malcolm Node;help:M
 # basic connection information
 destination.geo.city_name=db:destination.geo.city_name;group:malcolm;kind:termfield;friendly:Responding GeoIP City;help:Responding GeoIP City
 destination.geo.country_name=db:destination.geo.country_name;group:malcolm;kind:termfield;friendly:Responding GeoIP Country;help:Responding GeoIP Country
-destination.hostname=db:destination.hostname;group:malcolm;kind:termfield;friendly:Responding Host Name;help:Responding Host Name
+destination.device=db:destination.device;group:malcolm;kind:termfield;friendly:Responding Device;help:Responding Device
 destination.ip_reverse_dns=db:destination.ip_reverse_dns;group:malcolm;kind:termfield;friendly:Responding IP Reverse DNS;help:Responding IP Reverse DNS
 destination.oui=db:destination.oui;group:malcolm;kind:termfield;friendly:Responding OUI;help:Responding OUI
 destination.segment=db:destination.segment;group:malcolm;kind:termfield;friendly:Responding Network Segment;help:Responding Network Segment
@@ -112,7 +112,7 @@ related.password=db:related.password;group:malcolm;kind:termfield;friendly:Passw
 related.user=db:related.user;group:malcolm;kind:termfield;friendly:User;help:User
 source.geo.city_name=db:source.geo.city_name;group:malcolm;kind:termfield;friendly:Originating GeoIP City;help:Originating GeoIP City
 source.geo.country_name=db:source.geo.country_name;group:malcolm;kind:termfield;friendly:Originating GeoIP Country;help:Originating GeoIP Country
-source.hostname=db:source.hostname;group:malcolm;kind:termfield;friendly:Originating Host Name;help:Originating Host Name
+source.device=db:source.device;group:malcolm;kind:termfield;friendly:Originating Device;help:Originating Device
 source.ip_reverse_dns=db:source.ip_reverse_dns;group:malcolm;kind:termfield;friendly:Originating IP Reverse DNS;help:Originating IP Reverse DNS
 source.nat.ip=db:source.nat.ip;group:malcolm;kind:termfield;friendly:NAT IP;help:NAT IP
 source.nat.port=db:source.nat.port;group:malcolm;kind:integer;friendly:NAT Port;help:NAT Port
