--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -456,10 +456,10 @@ filter {
 
   ################################################################################################
   # Do enrichment based on NetBox lookups:
-  # - source.ip -> source.hostname and source.segment
-  # - destination.ip -> destination.hostname and destination.segment
-  # - TODO: source.mac -> source.hostname
-  # - TODO: destination.mac -> destination.hostname
+  # - source.ip -> source.device and source.segment
+  # - destination.ip -> destination.device and destination.segment
+  # - TODO: source.mac -> source.device
+  # - TODO: destination.mac -> destination.device
   # The LOGSTASH_NETBOX_ENRICHMENT environment variable is checked inside netbox_enrich.rb
   #   and will short-circuit unles this feature is enabled.
 
@@ -469,7 +469,7 @@ filter {
       path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
       script_params => {
         "source" => "[source][ip]"
-        "target" => "[source][hostname]"
+        "target" => "[source][device]"
         "lookup_type" => "ip_device"
         "netbox_token_env" => "SUPERUSER_API_TOKEN"
       }
@@ -491,7 +491,7 @@ filter {
       path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
       script_params => {
         "source" => "[destination][ip]"
-        "target" => "[destination][hostname]"
+        "target" => "[destination][device]"
         "lookup_type" => "ip_device"
         "netbox_token_env" => "SUPERUSER_API_TOKEN"
       }
