work in progress on idaholab/Malcolm#132, standardizing some names

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -469,7 +469,7 @@ filter {
       path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
       script_params => {
         "source" => "[source][ip]"
-        "target" => "[source][device]"
+        "target" => "[source][device][name]"
         "lookup_type" => "ip_device"
         "netbox_token_env" => "SUPERUSER_API_TOKEN"
       }
@@ -479,7 +479,7 @@ filter {
       path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
       script_params => {
         "source" => "[source][ip]"
-        "target" => "[source][segment]"
+        "target" => "[source][segment][name]"
         "lookup_type" => "ip_vrf"
         "netbox_token_env" => "SUPERUSER_API_TOKEN"
       }
@@ -491,7 +491,7 @@ filter {
       path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
       script_params => {
         "source" => "[destination][ip]"
-        "target" => "[destination][device]"
+        "target" => "[destination][device][name]"
         "lookup_type" => "ip_device"
         "netbox_token_env" => "SUPERUSER_API_TOKEN"
       }
@@ -501,7 +501,7 @@ filter {
       path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
       script_params => {
         "source" => "[destination][ip]"
-        "target" => "[destination][segment]"
+        "target" => "[destination][segment][name]"
         "lookup_type" => "ip_vrf"
         "netbox_token_env" => "SUPERUSER_API_TOKEN"
       }
