--- a/logstash/pipelines/enrichment/17_segment_comparison.conf
+++ b/logstash/pipelines/enrichment/17_segment_comparison.conf
@@ -1,7 +1,7 @@
 filter {
 
-  if ([destination][segment] and [source][segment]) and
-     ([destination][segment] != [source][segment]) {
+  if ([destination][segment][name] and [source][segment][name]) and
+     ([destination][segment][name] != [source][segment][name]) {
     mutate {
       id => "mutate_add_tag_cross_segment"
       add_tag => [ "cross_segment" ]
