--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -85,10 +85,10 @@ host.name=db:host.name;group:malcolm;kind:termfield;friendly:Malcolm Node;help:M
 # basic connection information
 destination.geo.city_name=db:destination.geo.city_name;group:malcolm;kind:termfield;friendly:Responding GeoIP City;help:Responding GeoIP City
 destination.geo.country_name=db:destination.geo.country_name;group:malcolm;kind:termfield;friendly:Responding GeoIP Country;help:Responding GeoIP Country
-destination.device=db:destination.device;group:malcolm;kind:termfield;friendly:Responding Device;help:Responding Device
+destination.device.name=db:destination.device.name;group:malcolm;kind:termfield;friendly:Responding Device Name;help:Responding Device Name
 destination.ip_reverse_dns=db:destination.ip_reverse_dns;group:malcolm;kind:termfield;friendly:Responding IP Reverse DNS;help:Responding IP Reverse DNS
 destination.oui=db:destination.oui;group:malcolm;kind:termfield;friendly:Responding OUI;help:Responding OUI
-destination.segment=db:destination.segment;group:malcolm;kind:termfield;friendly:Responding Network Segment;help:Responding Network Segment
+destination.segment.name=db:destination.segment.name;group:malcolm;kind:termfield;friendly:Responding Network Segment Name;help:Responding Network Segment Name
 event.action=db:event.action;group:malcolm;kind:termfield;friendly:Action;help:Action
 event.freq_score_v1=db:event.freq_score_v1;group:malcolm;kind:float;friendly:Freq Score v1;help:Freq Score v1
 event.freq_score_v2=db:event.freq_score_v2;group:malcolm;kind:float;friendly:Freq Score v2;help:Freq Score v2
@@ -112,12 +112,12 @@ related.password=db:related.password;group:malcolm;kind:termfield;friendly:Passw
 related.user=db:related.user;group:malcolm;kind:termfield;friendly:User;help:User
 source.geo.city_name=db:source.geo.city_name;group:malcolm;kind:termfield;friendly:Originating GeoIP City;help:Originating GeoIP City
 source.geo.country_name=db:source.geo.country_name;group:malcolm;kind:termfield;friendly:Originating GeoIP Country;help:Originating GeoIP Country
-source.device=db:source.device;group:malcolm;kind:termfield;friendly:Originating Device;help:Originating Device
+source.device.name=db:source.device.name;group:malcolm;kind:termfield;friendly:Originating Device Name;help:Originating Device Name
 source.ip_reverse_dns=db:source.ip_reverse_dns;group:malcolm;kind:termfield;friendly:Originating IP Reverse DNS;help:Originating IP Reverse DNS
 source.nat.ip=db:source.nat.ip;group:malcolm;kind:termfield;friendly:NAT IP;help:NAT IP
 source.nat.port=db:source.nat.port;group:malcolm;kind:integer;friendly:NAT Port;help:NAT Port
 source.oui=db:source.oui;kind:termfield;group:malcolm;friendly:Originating OUI;help:Originating OUI
-source.segment=db:source.segment;group:malcolm;kind:termfield;friendly:Originating Network Segment;help:Originating Network Segment
+source.segment.name=db:source.segment.name;group:malcolm;kind:termfield;friendly:Originating Network Segment Name;help:Originating Network Segment Name
 user_agent.original=db:user_agent.original;group:malcolm;kind:termfield;friendly:User Agent;help:User Agent
 url.original=db:url.original;group:malcolm;kind:termfield;friendly:URL;help:URL
 vulnerability.category=db:vulnerability.category;group:malcolm;kind:termfield;friendly:Vulnerability Category;help:Vulnerability Category
