catch parsing nil value

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -6433,7 +6433,7 @@ filter {
         code => "
           parameterHash = event.get('[zeek][tds_rpc][parameter]').split(',').each_with_object({}) do |a, hash|
             key,value = a.split(/\s*=\s*/)
-            hash[key.delete_prefix('@')] = value
+            hash[key.to_s.delete_prefix('@')] = value
           end
           event.set('[zeek][tds_rpc][parameters]', parameterHash)"
       }
