only do IP address lookups on internal (private IP space) IP addresses

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -463,7 +463,8 @@ filter {
   # The LOGSTASH_NETBOX_ENRICHMENT environment variable is checked inside netbox_enrich.rb
   #   and will short-circuit unles this feature is enabled.
 
-  if ([source][ip]) {
+  if ([source][ip]) and
+     (([network][direction] == "internal") or ([network][direction] == "outbound")) {
     ruby {
       id => "ruby_netbox_enrich_source_ip_device"
       path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
@@ -485,7 +486,8 @@ filter {
       }
     }
   }
-  if ([destination][ip]) {
+  if ([destination][ip]) and
+     (([network][direction] == "internal") or ([network][direction] == "inbound")) {
     ruby {
       id => "ruby_netbox_enrich_destination_ip_device"
       path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
