remove 'required tag' from name-map-ui feature:

--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -466,6 +466,7 @@ services:
         hard: -1
     cap_add:
       - IPC_LOCK
+    env_file: ./netbox/env/netbox.env
     environment:
       << : *process-variables
       << : *ssl-variables
