--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -478,6 +478,7 @@ services:
         hard: -1
     cap_add:
       - IPC_LOCK
+    env_file: ./netbox/env/netbox.env
     environment:
       << : *process-variables
       << : *ssl-variables
